fixed portfolio
Portfolio not overlapping on window start

--- a/src/components/laptop/laptop.css
+++ b/src/components/laptop/laptop.css
@@ -175,7 +175,7 @@
   }
 
   .portfolio {
-    position: inherit;
+    position: absolute;
     z-index: 1;
     top: 80px;
   }
